--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -54,6 +54,11 @@ body,
   top: 0;
   left: 0;
 }
+.carouselIndex {
+  position: absolute !important;
+  top: 0;
+  left: 0;
+}
 
 #portfolio {
   padding-top: 70px;
@@ -278,7 +283,7 @@ hr {
 }
 
 .carousel {
-  position: relative !important;
+  position: relative;
   height: 100% !important;
 }
 
