--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -397,3 +397,10 @@ a {
   background-position: center;
   object-fit: cover;
 }
+
+.active-section {
+  background-image:linear-gradient(rgb(50, 50, 50),rgb(50, 50, 50));
+  background-position:0 75%;
+  background-size:100% 5px; 
+  background-repeat:no-repeat;
+}
