--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -404,3 +404,36 @@ a {
   background-size:100% 5px; 
   background-repeat:no-repeat;
 }
+
+.index-link {
+  position: absolute;
+  left: 115px;
+  bottom: 50px;
+  cursor: pointer;
+  color: black !important;
+  text-decoration: none !important;
+}
+
+.index-link:hover{
+  color: rgb(199, 199, 199) !important;
+}
+
+.index-link::before{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 2px;
+  color: black;
+  background-color: black;
+  transition: width 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .index-link:hover::before{
+    left: 0;
+    right: auto;
+    width: 100%;
+  }
+}
